--- a/templates/subscription/index.html.twig
+++ b/templates/subscription/index.html.twig
@@ -618,10 +618,10 @@
             </ul> #}
 
             {# Si tu as une route portail, décommente #}
-            <a class="cta-button outline" href="{{ path('app_subscription_portal') }}" style="margin-top: 22px; display:block;">
+            {# <a class="cta-button outline" href="{{ path('app_subscription_portal') }}" style="margin-top: 22px; display:block;">
               <i class="fa-solid fa-gear" style="margin-right: 8px;"></i>
               {{ 'subscription.status_card.cta_manage'|trans }}
-            </a>
+            </a> #}
           </div>
         </div>
       </div>
